--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&display=swap"
       rel="stylesheet"
