--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="forest">
+<html lang="en" data-theme="cryptogifts">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.png" />
